--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header class="topbar">
-    <div class="brand">CommuniCoach</div>
+    <div class="brand">ConfideX</div>
     <div class="welcome"></div>
     <div class="right">
       <button id="darkToggle" class="btn small">🌙</button>
